trillian/examples/deployment/kubernetes/ctfe-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: trillian-ctfe
  name: trillian-ctfe-deployment
spec:
  replicas: 3
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: trillian-ctfe
    spec:
      containers:
        - name: trillian-ctfe
          command: ["/go/bin/ct_server",
          "--http_endpoint=0.0.0.0:6962",
          "--metrics_endpoint=0.0.0.0:6963",
          "--log_rpc_server=trillian-log:8090",
          "--log_config=/ctfe-config/ct_server.cfg",
          "--alsologtostderr"
          ]
          image: gcr.io/trillian-opensource-ci/ctfe:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "1.8"
            requests:
              cpu: "1"
          livenessProbe:
            exec:
              command:
              - curl
              - -f
              - http://localhost:6963/metrics
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 30
          ports:
          - containerPort: 6962
            name: http
          - containerPort: 6963
            name: metrics
          volumeMounts:
          - name: ctfe-config-volume
            mountPath: /ctfe-config
      nodeSelector:
        cloud.google.com/gke-nodepool: ctfe-pool
      volumes:
        - name: ctfe-config-volume
          configMap:
            name: ctfe-configmap
            items:
            - key: ctfe-config-file
              path: ct_server.cfg
            - key: roots
              path: roots
      restartPolicy: Always
status: {}
